<resources>
    <string name="app_name">PiRoverApp</string>
    <string name="app_title">PiRover</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_titleMenu">Options Control</string>
    <!-- Strings related to login -->

    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="back">Back</string>
    <string name="auto">Automatic</string>
    <string name="manual">Manual</string>

    <string name="register_name">Enter your full name</string>
    <string name="register_user">Enter your username</string>
    <string name="register_pass">Enter your password</string>
    <string name="register_serial">Choose a port ID</string>

    <string name="register_serialButton1">00001101-0000-1000-8000-00805f9b34fb</string>
    <string name="register_serialButton2">00001101-0000-1000-8000-12345test</string>


    <string name="login_user">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">TestTitle</string>

    <!-- Splash Names -->
    <string name="splash_teamName">Pi NIVEA PRODUCTIONS</string>
    <string name="splash_dev">DEVELOPERS: </string>
    <string name="splash_chris">CHRISTOPHER ALBARILLO</string>
    <string name="splash_law">LAWRENCE PUIG</string>
    <string name="splash_iff">IFRAH HASSAN</string>

    <string name="menu_welcome">WELCOME</string>
    <string name="menu_serial">SERIAL ID:</string>

</resources>
