<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.piroverapp.RegisterActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="48dp"
        tools:layout_editor_absoluteX="81dp" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_user"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="116dp"
        tools:layout_editor_absoluteX="81dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:ems="10"
        android:hint="@string/register_pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:layout_editor_absoluteY="446dp"
        tools:layout_editor_absoluteX="131dp" />

    <TextView
        android:id="@+id/serialidButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_serial"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginStart="35dp"
        tools:layout_editor_absoluteY="273dp"
        tools:layout_editor_absoluteX="116dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginEnd="33dp"
        tools:layout_editor_absoluteY="331dp"
        tools:layout_editor_absoluteX="57dp">

        <RadioButton
            android:id="@+id/serialRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/register_serialButton1" />

        <RadioButton
            android:id="@+id/serialRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/register_serialButton2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="536dp" />

</android.support.constraint.ConstraintLayout>
